[package]
name = "cyborg-node"
description = "A parachain node template built with Substrate and Cumulus, part of Polkadot Sdk. (polkadot v1.13.0)"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

# [[bin]]
# name = "cyborg-node"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
log = { workspace = true, default-features = true }
codec = { package = "parity-scale-codec", version = "3.6.12" }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { version = "0.24.3", features = ["server"] }
futures = "0.3.28"
serde_json = { workspace = true, default-features = true }
docify = "0.2.8"
cyborg-runtime = { version = "0.1.0", path = "../runtime" }
frame-benchmarking = { version = "41.0.0" }
frame-benchmarking-cli = { version = "49.0.0" }
pallet-transaction-payment-rpc = { version = "44.0.0" }
sc-basic-authorship = { version = "0.50.0" }
sc-chain-spec = { version = "44.0.0" }
sc-cli = { version = "0.53.0" }
sc-client-api = { version = "40.0.0" }
sc-offchain = { version = "46.0.0" }
sc-consensus = { version = "0.50.0" }
sc-executor = { version = "0.43.0" }
sc-network = { version = "0.51.0" }
sc-network-sync = { version = "0.50.0" }
sc-rpc = { version = "46.0.0" }
sc-service = { version = "0.52.0" }
sc-sysinfo = { version = "43.0.0" }
sc-telemetry = { version = "29.0.0" }
sc-tracing = { version = "40.0.0" }
sc-transaction-pool = { version = "40.0.0" }
sc-transaction-pool-api = { version = "40.0.0" }
sp-api = { version = "37.0.0" }
sp-block-builder = { version = "37.0.0" }
sp-blockchain = { version = "40.0.0" }
sp-consensus-aura = { version = "0.43.0" }
sp-core = { version = "37.0.0" }
sp-keystore = { version = "0.43.0" }
sp-io = { version = "41.0.1" }
sp-runtime = { version = "42.0.0" }
sp-timestamp = { version = "37.0.0" }
substrate-frame-rpc-system = { version = "45.0.0" }
prometheus-endpoint = { version = "0.17.2", package = "substrate-prometheus-endpoint" }

# Polkadot
polkadot-cli = { version = "25.0.0", features = ["rococo-native"] }
polkadot-primitives = { version = "19.0.0" }
xcm = { version = "17.0.0", package = "staging-xcm", default-features = false }
cumulus-client-cli = { version = "0.24.0" }
cumulus-client-collator = { version = "0.24.0" }
cumulus-client-consensus-aura = { version = "0.24.0" }
cumulus-client-consensus-common = { version = "0.24.0" }
cumulus-client-consensus-proposer = { version = "0.20.0" }
cumulus-client-service = { version = "0.25.0" }
cumulus-primitives-core = { version = "0.19.0" }
cumulus-primitives-parachain-inherent = { version = "0.19.0" }
cumulus-relay-chain-interface = { version = "0.24.0" }
cumulus-client-bootnodes = { version = "0.2.0" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"cyborg-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"cyborg-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
