[package]
authors.workspace = true
description = "Pallet for managing connected workers"
edition.workspace = true
homepage.workspace = true
name = "pallet-edge-connect"
publish = false
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec =  { workspace = true }
cyborg-primitives = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
libm = { version = "0.2", default-features = false }


[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "codec/std",
    "cyborg-primitives/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
]
try-runtime = [
    "frame-support/try-runtime", 
    "frame-system/try-runtime"
]

