[package]
authors.workspace = true
description = "Pallet allow users to purchase compute hours from a single service (Cyborg). Users can buy compute hours by transferring tokens, which are credited to their account for future consumption."
edition.workspace = true
homepage.workspace = true
name = "pallet-payment"
publish = false
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"]}
cyborg-primitives = { workspace = true }
frame-benchmarking = { workspace = true, optional=true } 
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
scale-info = { workspace = true}
sp-runtime= { workspace = true }
sp-std = { workspace = true }
log={workspace = true}

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"cyborg-primitives/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-sudo/std",
	"scale-info/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]


