[package]
authors.workspace = true
description = "Creation and management of tasks for workers to consume"
edition.workspace = true
homepage.workspace = true
name = "pallet-task-management"
publish = false
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = "1.0.0"
base64 = { version = "0.21" }
codec = { workspace = true }
cyborg-primitives = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
pallet-edge-connect = { workspace = true }
pallet-balances = { workspace = true }
pallet-payment = {workspace = true }
pallet-timestamp = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[dev-dependencies]
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-edge-connect/std",
	"pallet-payment/std",
	"scale-info/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
